--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <link rel="stylesheet" href="./Resources/mcleod-reset.css">
     <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
+    <!-- FavIcon Stuff -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://erfaneo.github.io/MyPortfolio/FavIcon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://erfaneo.github.io/MyPortfolio/FavIcon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://erfaneo.github.io/MyPortfolio/FavIcon/favicon-16x16.png">
+    <link rel="manifest" href="https://erfaneo.github.io/MyPortfolio/FavIcon/site.webmanifest">
+    <link rel="mask-icon" href="https://erfaneo.github.io/MyPortfolio/FavIcon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="https://erfaneo.github.io/MyPortfolio/FavIcon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="msapplication-config" content="https://erfaneo.github.io/MyPortfolio/FavIcon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
     <!-- Nav -->
