--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="imgWrapper inActiveS3 inActiveS3 col-10 col-md-5 col-xl-4 d-flex justify-content-center mb-3 mb-md-4">
                         <div class="cardsHeader"><a href="#Profile" ><h2 class="h1">مشاهده</h2></a></div>
                         <div class="gitCntr"><a target="_blank" href="https://github.com/erfaneo/MyPortfolio" ><i class="fa-brands fa-github py-2 px-1"></i></a></div>
-                        <div class="langCntr col-11 col-md-8 col-lg-8 px-1 py-2">Bootstrap - Reac</div>
+                        <div class="langCntr col-11 col-md-8 col-lg-8 px-1 py-2">HTML - CSS - Js - Bootstrap</div>
                         <a class="d-flex justify-content-center" href="#Profile">
                             <img class="projectImgs" src="./Imgs/portfolio.png" alt="">
                         </a>
